--- a/app/src/main/res/layout/activity_h264_player.xml
+++ b/app/src/main/res/layout/activity_h264_player.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:orientation="vertical"
     tools:context=".activity.simple.H264PlayerActivity">
 
-    <SurfaceView
-        android:id="@+id/surfaceView"
-        android:layout_width="@dimen/dimen_360"
-        android:layout_height="@dimen/dimen_640"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <com.peakmain.ui.widget.ShapeTextView
-        style="@style/stv_basic_style"
-        android:onClick="mediaCodecH264PlayClick"
-        android:text="@string/stv_mediacodec_h264_player"
-        app:shapeTvBackgroundColor="@color/color_2F73F6"
-        app:shapeTvRadius="@dimen/dimen_5" />
-</LinearLayout>
+        <SurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_width="@dimen/dimen_360"
+            android:layout_height="@dimen/dimen_640"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.peakmain.ui.widget.ShapeTextView
+            style="@style/stv_basic_style"
+            android:onClick="mediaCodecH264PlayClick"
+            android:text="@string/stv_mediacodec_h264_player"
+            app:shapeTvBackgroundColor="@color/color_2F73F6"
+            app:shapeTvRadius="@dimen/dimen_5" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
