--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -3,28 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:context=".activity.CameraActivity"
     android:layout_height="match_parent"
-    >
+    tools:context=".activity.CameraActivity">
+
     <com.peakmain.video_audio.widget.CameraSurface
         android:id="@+id/surface"
         android:layout_width="match_parent"
-        android:visibility="gone"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
     <TextureView
         android:id="@+id/texture_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <com.peakmain.ui.widget.ShapeTextView
-       style="@style/stv_basic_style"
-        app:shapeTvRadius="@dimen/dimen_3"
-        app:shapeTvBackgroundColor="@color/color_2F73F6"
-        android:onClick="cameraClick"
-        android:text="camera拍照"/>
-    <com.peakmain.ui.widget.ShapeTextView
-        style="@style/stv_basic_style"
-        app:shapeTvRadius="@dimen/dimen_3"
-        app:shapeTvBackgroundColor="@color/color_2F73F6"
-        android:onClick="camera2Click"
-        android:text="camera2实现直播"/>
+        android:layout_height="match_parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical">
+
+        <com.peakmain.ui.widget.ShapeTextView
+            style="@style/stv_basic_style"
+            android:onClick="cameraClick"
+            android:text="camera拍照"
+            android:layout_gravity="start"
+            app:shapeTvBackgroundColor="@color/color_2F73F6"
+            app:shapeTvRadius="@dimen/dimen_3" />
+
+        <com.peakmain.ui.widget.ShapeTextView
+            style="@style/stv_basic_style"
+            android:onClick="camera2Click"
+            android:text="camera2实现直播"
+            android:layout_gravity="start"
+            app:shapeTvBackgroundColor="@color/color_2F73F6"
+            app:shapeTvRadius="@dimen/dimen_3" />
+        <com.peakmain.ui.widget.ShapeTextView
+            style="@style/stv_basic_style"
+            android:onClick="cameraXClick"
+            android:text="cameraX实现直播"
+            android:layout_gravity="start"
+            app:shapeTvBackgroundColor="@color/color_2F73F6"
+            app:shapeTvRadius="@dimen/dimen_3" />
+    </LinearLayout>
 </RelativeLayout>
