--- a/app/src/main/res/layout/activity_project_screen.xml
+++ b/app/src/main/res/layout/activity_project_screen.xml
@@ -11,7 +11,7 @@
     <SurfaceView
         android:id="@+id/surface_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_360"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
